2007-09-18  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Adam.

        Move the Pasteboard stubs to PasteboardGdk.cpp.

        * WebCore.pro:
        * platform/gdk/PasteboardGdk.cpp: Added.
        (WebCore::Pasteboard::generalPasteboard):
        (WebCore::Pasteboard::writeSelection):
        (WebCore::Pasteboard::writeURL):
        (WebCore::Pasteboard::writeImage):
        (WebCore::Pasteboard::clear):
        (WebCore::Pasteboard::canSmartReplace):
        (WebCore::Pasteboard::documentFragment):
        (WebCore::Pasteboard::plainText):
        (WebCore::Pasteboard::Pasteboard):
        * platform/gdk/TemporaryLinkStubs.cpp:

2007-09-18  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Adam.

        Move the Icon stubs to IconGdk.cpp

        * WebCore.pro:
        * platform/gdk/TemporaryLinkStubs.cpp:
        * platform/graphics/gdk/IconGdk.cpp: Added.
        (WebCore::Icon::Icon):
        (WebCore::Icon::~Icon):
        (WebCore::Icon::newIconForFile):

2007-09-18  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Adam.

        Move the Font stubs to FontGdk.cpp

        * platform/gdk/FontGdk.cpp:
        (WebCore::Font::drawComplexText):
        (WebCore::Font::floatWidthForComplexText):
        (WebCore::Font::offsetForPositionForComplexText):
        (WebCore::Font::selectionRectForComplexText):
        * platform/gdk/TemporaryLinkStubs.cpp:

2007-09-18  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Adam.

        Move the SearchPopupMenu stubs to SearchPopupMenuGdk.cpp

        * WebCore.pro:
        * platform/gdk/SearchPopupMenuGdk.cpp: Added.
        (WebCore::SearchPopupMenu::SearchPopupMenu):
        (WebCore::SearchPopupMenu::saveRecentSearches):
        (WebCore::SearchPopupMenu::loadRecentSearches):
        (WebCore::SearchPopupMenu::enabled):
        * platform/gdk/TemporaryLinkStubs.cpp:

2007-09-18  Holger Hans Peter Freyther  <zecke@selfish.org>
