@@ -28,44 +28,17 @@
 #include "config.h"
 
 #include "AXObjectCache.h"
-#include "CString.h"
 #include "CachedPage.h"
-#include "CachedResource.h"
 #include "Clipboard.h"
-#include "CookieJar.h"
-#include "Cursor.h"
-#include "DocumentFragment.h"
-#include "DocumentLoader.h"
-#include "EditCommand.h"
 #include "Editor.h"
-#include "FrameLoadRequest.h"
-#include "FrameLoader.h"
 #include "FrameView.h"
 #include "FTPDirectoryDocument.h"
 #include "GlobalHistory.h"
-#include "GraphicsContext.h"
-#include "HTMLFrameOwnerElement.h"
-#include "Icon.h"
-#include "IconDatabase.h"
-#include "IconLoader.h"
-#include "IntPoint.h"
-#include "KURL.h"
 #include "Language.h"
-#include "MainResourceLoader.h"
-#include "Node.h"
 #include "NotImplemented.h"
-#include "PlatformMouseEvent.h"
 #include "PlugInInfoStore.h"
-#include "ResourceError.h"
-#include "ResourceHandle.h"
-#include "ResourceLoader.h"
-#include "Screen.h"
-#include "ScrollBar.h"
 #include "TextBoundaries.h"
 #include "TextBreakIteratorInternalICU.h"
-#include "loader.h"
-#include <gtk/gtk.h>
-#include <stdio.h>
 
 using namespace WebCore;
 
